Pushing first commit for 0.0.5 alpha

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-# Project folders
 outputs
-data
-# Model sample files
+datasets
+opendeep/log/logs
 *.npy
 
 #################
 ## Eclipse
 #################
+
 *.pydevproject
 .project
 .metadata
@@ -20,19 +20,25 @@ local.properties
 .classpath
 .settings/
 .loadpath
+
 # External tool builders
 .externalToolBuilders/
+
 # Locally stored "Eclipse launch configurations"
 *.launch
+
 # CDT-specific
 .cproject
+
 # PDT-specific
 .buildpath
 
 #############
 ## Python
 #############
+
 *.py[co]
+
 # Packages
 *.egg
 *.egg-info
@@ -44,17 +50,59 @@ var/
 sdist/
 develop-eggs/
 .installed.cfg
+
 # Installer logs
 pip-log.txt
+
 # Unit test / coverage reports
 .coverage
 .tox
+
 #Translations
 *.mo
+
 #Mr Developer
 .mr.developer.cfg
+
 
 #############
 ## Macbook
 #############
 .DS_Store
+
+#############
+## Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
+#############
+*.iml
+## Directory-based project format:
+.idea/
+# if you remove the above rule, at least ignore the following:
+# User-specific stuff:
+# .idea/workspace.xml
+# .idea/tasks.xml
+# .idea/dictionaries
+# Sensitive or high-churn files:
+# .idea/dataSources.ids
+# .idea/dataSources.xml
+# .idea/sqlDataSources.xml
+# .idea/dynamic.xml
+# .idea/uiDesigner.xml
+# Gradle:
+# .idea/gradle.xml
+# .idea/libraries
+# Mongo Explorer plugin:
+# .idea/mongoSettings.xml
+## File-based project format:
+*.ipr
+*.iws
+## Plugin-specific files:
+# IntelliJ
+out/
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+# JIRA plugin
+atlassian-ide-plugin.xml
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
