Added logo to readme

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,8 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
+
+############
+# rst2html #
+############
+rst2html.py
