Some documentation changes, trying to work on ReadTheDocs.

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,5 @@ git+https://github.com/Theano/Theano.git#egg=theano
 PyYAML>=3.11
 # Bokeh for plotting (with bokeh-server)
 bokeh>=0.8.2
+# Mock for use in sphinx's conf.py in python versions < 3.3
+mock>=1.0.1
