--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 # Main requirements
-numpy>=1.9.2
+numpy>=1.8.1
 scipy>=0.13.3
 # Pillow is the successor to PIL for image processing
 Pillow>=2.8.1
 # The latest bleeding-edge Theano
---allow-external theano
---allow-unverified theano
-git+https://github.com/Theano/Theano.git#egg=theano
+#--allow-external theano
+#--allow-unverified theano
+#git+https://github.com/Theano/Theano.git#egg=theano
+theano >= 0.7.0
 
 # Optional requirements
 # PyYAML for YAML parsing capability
