--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
   - "3.2"
   - "3.3"
   - "3.4"
+  - "pypy"
+  - "pypy3"
   - "nightly"
 # command to install dependencies
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y gcc g++ gfortran build-essential libopenblas-dev liblapack-dev
 install:
   - "pip install -r requirements.txt"
 # command to run tests
