--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,5 @@ PyYAML>=3.11
 bokeh>=0.8.2
 # Mock for use in sphinx's conf.py in python versions < 3.3
 mock>=1.0.1
+# Numpydoc used in sphinx's conf.py for parsing docstrings
+numpydoc>=0.5
