--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y gcc g++ gfortran build-essential git wget linux-image-generic libopenblas-dev python-dev python-pip python-nose python-numpy python-scipy
 install:
-  - "pip install -r requirements.txt"
+  - "pip install -r req-travis.txt"
 # command to run tests
 script: nosetests
