--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,31 @@ python:
 # command to install dependencies
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y gcc g++ gfortran build-essential git wget linux-image-generic libopenblas-dev python-dev python-pip python-nose python-numpy python-scipy
+  - sudo apt-get install -y gcc g++ gfortran build-essential git wget linux-image-generic python-dev python-pip python-nose
+  - mkdir deps
+  - cd deps
+  - git clone https://github.com/xianyi/OpenBLAS
+  - cd OpenBLAS
+  - make FC=gfortran
+  - sudo make PREFIX=/opt/openblas install
+  - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/openblas/lib
+  - cd ..
+  - git clone https://github.com/numpy/numpy
+  - cd numpy
+  - touch site.cfg
+  - echo -e "[default]\ninclude_dirs = /opt/openblas/include\nlibrary_dirs = /opt/openblas/lib\n\n[openblas]\nopenblas_libs = openblas\nlibrary_dirs = /opt/openblas/lib\n\n[lapack]\nlapack_libs = openblas\nlibrary_dirs = /opt/openblas/lib" >> site.cfg
+  - python setup.py config
+  - python setup.py build --fcompiler=gnu95
+  - python setup.py install
+  - cd ..
+  - git clone https://github.com/scipy/scipy
+  - cd scipy
+  - touch site.cfg
+  - echo -e "[default]\ninclude_dirs = /opt/openblas/include\nlibrary_dirs = /opt/openblas/lib\n\n[openblas]\nopenblas_libs = openblas\nlibrary_dirs = /opt/openblas/lib\n\n[lapack]\nlapack_libs = openblas\nlibrary_dirs = /opt/openblas/lib" >> site.cfg
+  - python setup.py config
+  - python setup.py build --fcompiler=gnu95
+  - python setup.py install
+
 install:
   - "pip install -r req-travis.txt"
 # command to run tests
