--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - cd deps
   - git clone https://github.com/xianyi/OpenBLAS
   - cd OpenBLAS
-  - make FC=gfortran
+  - make FC=gfortran >/dev/null || make
   - sudo make PREFIX=/opt/openblas install
   - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/openblas/lib
   - cd ..
@@ -31,6 +31,7 @@ before_install:
   - python setup.py config
   - python setup.py build --fcompiler=gnu95
   - python setup.py install
+  - cd ../..
 
 install:
   - "pip install -r req-travis.txt"
