--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y gcc g++ gfortran build-essential git wget linux-image-generic libopenblas-dev python-dev python-pip python-nose
+  - pip install --upgrade pip
   - pip install cython
   - mkdir deps
   - cd deps
@@ -19,14 +20,6 @@ before_install:
   - cd ..
   - git clone https://github.com/numpy/numpy
   - cd numpy
-  - touch site.cfg
-  - echo -e "[default]\ninclude_dirs = /opt/openblas/include\nlibrary_dirs = /opt/openblas/lib\n\n[openblas]\nopenblas_libs = openblas\nlibrary_dirs = /opt/openblas/lib\n\n[lapack]\nlapack_libs = openblas\nlibrary_dirs = /opt/openblas/lib" >> site.cfg
-  - python setup.py config
-  - python setup.py build --fcompiler=gnu95
-  - python setup.py install
-  - cd ..
-  - git clone https://github.com/scipy/scipy
-  - cd scipy
   - touch site.cfg
   - echo -e "[default]\ninclude_dirs = /opt/openblas/include\nlibrary_dirs = /opt/openblas/lib\n\n[openblas]\nopenblas_libs = openblas\nlibrary_dirs = /opt/openblas/lib\n\n[lapack]\nlapack_libs = openblas\nlibrary_dirs = /opt/openblas/lib" >> site.cfg
   - python setup.py config
