Language model dataset (TextDataset) done. This returns the next (expected) word as the label.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ numpy>=1.8.1
 --allow-unverified theano
 git+https://github.com/Theano/Theano.git#egg=theano
 # Normal Theano
-# theano >= 0.7.0
+# theano>=0.7.0
 
 # Pillow is the successor to PIL for image processing
 Pillow>=2.8.1
@@ -20,3 +20,5 @@ Pillow>=2.8.1
 PyYAML>=3.11
 # Bokeh for plotting (with bokeh-server)
 bokeh>=0.8.2
+# NLTK for nlp tasks (like word tokenization)
+nltk>=3.0.1
