added Six dependency (instead of relying on Theano's six inclusion) to later make Theano an optional dependency when multiple backends are implemented.

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,9 @@ git+https://github.com/Theano/Theano.git#egg=theano
 # Pillow is the successor to PIL for image processing
 Pillow>=2.8.1
 
+# Six for python2/3 compatibility
+six>=1.10.0
+
 #########################
 # Optional requirements #
 #########################
