--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,6 @@ Pillow>=2.8.1
 # PyYAML for YAML parsing capability
 PyYAML>=3.11
 # Bokeh for plotting (with bokeh-server)
-bokeh==0.11.1
+bokeh>=0.11.0,<0.11.99
 # NLTK for nlp tasks (like word tokenization)
 nltk>=3.0.1
